objects/ASI_MFM_PO_Date_Range__c.object
<CustomObject>
    <description>PO Date Range for JP to generate PO number</description>
    <fields>
        <fullName>ASI_MFM_Fiscal_Period__c</fullName>
        <label>Fiscal Period</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_GL_Date__c</fullName>
        <label>G/L Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_End_Date__c</fullName>
        <label>PO End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Start_Date__c</fullName>
        <label>PO Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>asi_mfm_next_number__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Next Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ASI MFM PO Date Range</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_PO_Start_Date__c</columns>
        <columns>ASI_MFM_PO_End_Date__c</columns>
        <columns>ASI_MFM_GL_Date__c</columns>
        <columns>ASI_MFM_Fiscal_Period__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>PO Date Range Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ASI MFM PO Date Range</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>